Add additional thing and change formatting

--- a/pet-page.html
+++ b/pet-page.html
@@ -11,9 +11,10 @@
     <ol>
       <li>Eating</li>
       <li>Sleeping</li>
+      <li>Heating Pad</li>
       <li>Catnip</li>
     </ol>
 
-    <p>Thanks for reading about Charlie!</p>
+    <p>Thanks for reading about <strong>Charlie!</strong></p>
   </body>
 </html>
