--- a/pet-page.html
+++ b/pet-page.html
@@ -12,7 +12,7 @@
       <li>Eating</li>
       <li>Sleeping</li>
       <li>Heating Pad</li>
-      <li>Catnip</li>
+      <li><em>Catnip</em></li>
     </ol>
     <p>Charlie's favorite <a href="https://petsonbroadway.com/">website!</a></p>
     <p>Thanks for reading about <strong>Charlie!</strong></p>
