Add additional Charlie photos

--- a/pet-page.html
+++ b/pet-page.html
@@ -6,7 +6,24 @@
   <body>
     <h1>Charlie's Fan Page</h1>
     <h2>Charlie is an eleven year old cat living in Portland, Oregon</h2>
-    <img src="img/charlie.jpeg" alt="A photo of Charlie the cat." />
+    <img
+      src="img/charlie.jpeg"
+      width="400"
+      height="500"
+      alt="A photo of Charlie the cat."
+    />
+    <img
+      src="img/charlie-tongue.jpeg"
+      width="400"
+      height="500"
+      alt="A photo of Charlie the cat."
+    />
+    <img
+      src="img/charlie-cone.jpeg"
+      width="400"
+      height="500"
+      alt="A photo of Charlie the cat."
+    />
     <p>Charlie's favorite things and activities, in order:</p>
     <ol>
       <li>Eating</li>
